--- a/1-2/1-2.html
+++ b/1-2/1-2.html
@@ -2,9 +2,10 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <title>2章演習</title>
+    <link rel="stylesheet" href="1-2.css" />
     <h1>サービス紹介</h1>
 
-    <link rel="stylesheet" href="1-2.css" />
   </head>
 <h2>webcamp</h2>
 
@@ -16,19 +17,17 @@
 
   <body>
   <p>未経験から転職を保証する日本で唯一のプログラミングスクールです。</p>
-    <a href="https://web-camp.io/commit/">webサイト</a>
+    <a href="http://web-camp.io/pro/">webサイト</a>
 　</body>
 <h2>webcamp woman</h2>
 
 <body>
   <p>家庭も仕事も頑張りたい主婦・ママ向けの、1ヶ月でWebサイトを制作するWebデザインスクールです。</p>
-    <a href="https://web-camp.io/">webサイト</a>
+    <a href="http://web-camp.io/woman/">webサイト</a>
 </body>
 <h2>webcamp career</h2>
 
 <body>
   <p>3000名のエンジニアをサポートしてきたエージェントがあなたの転職をサポート。</p>
-    <a href="https://web-camp.io/">webサイト</a>
-
-
+    <a href="http://web-camp.io/career/">webサイト</a>
 </html>
