--- a/flexbox/flexbox.html
+++ b/flexbox/flexbox.html
@@ -7,12 +7,31 @@
  </head>
 
  <body>
-  <header>
-   
-  </header>
-
-
-
-
+  <div class="header">
+   <div></div>
+   <div></div>
+   <div></div>
+   <div></div>
+   <div></div>
+  </div>
+  <div class="main">
+   <div class="sidebar"></div>
+   <div class="content">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+   </div>
+  </div>
+  <div class="footer">
+   <div></div>
+   <div></div>
+   <div></div>
+  </div>
  </body>
 </html>
